kubernetes/src/main/project-resources/03-nacos/04-nacos-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: xiang-nacos-ingress
  namespace: xiang-cloud
spec:
  ingressClassName: nginx
  rules:
  - host: nacos.yuncen-cloud.com
    http:
      paths:
      - backend:
          service:
            name: xiang-nacos-svc
            port:
              number: 8848
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
